--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,4 +20,8 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  datetime:
+    distance_in_words:
+      about_x_hours:
+        one: "1 hour ago"
+        other: "%{count} hours"
