--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -16,12 +16,18 @@
 #
 # This would use the information in config/locales/es.yml.
 #
+# The following keys must be escaped otherwise they will not be retrieved by
+# the default I18n backend:
+#
+# true, false, on, off, yes, no
+#
+# Instead, surround them with single quotes.
+#
+# en:
+#   'true': 'foo'
+#
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  datetime:
-    distance_in_words:
-      about_x_hours:
-        one: "1 hour ago"
-        other: "%{count} hours"
+  hello: "Hello world"
